alignment fixed

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -7,6 +7,7 @@ img, p, h2, h1{
 
 ul{
     padding-left: 18px;
+    padding-right: 18px;
 }
 li{
     padding-bottom: 16px;
